--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <title>Boillerplate</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       <link href="https://fonts.googleapis.com/css?family=Audiowide|Julius+Sans+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet">
        <link rel="stylesheet" href="./styles/bootstrap.min.css">
     <body>
      <div id="root"></div>
